# PetGame

./: .gitignore  PetGame.sln
PetGame/: Application.cpp  Application.h  CMakeLists.txt  DigiPet.cpp  DigiPet.h  IdleState.cpp  IdleState.h  PetGame.vcxproj  PetGame.vcxproj.filters  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h
PetGame/libs/glad/include/glad/: glad.h
PetGame/libs/glad/src/: glad.c
PetGame/libs/imgui/imgui/backends/: imgui_impl_allegro5.cpp  imgui_impl_android.cpp  imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_dx9.cpp  imgui_impl_glfw.cpp  imgui_impl_glut.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imgui_impl_sdl2.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer3.cpp  imgui_impl_vulkan.cpp  imgui_impl_wgpu.cpp  imgui_impl_win32.cpp
PetGame/libs/imgui/imgui/backends/sdlgpu3/: shader.vert
PetGame/shaders/: sprite.frag  sprite.vert
PetGame/src/: Application.cpp  Application.h  DigiPet.cpp  DigiPet.h  FeedingState.cpp  FeedingState.h  IState.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h  main.cpp
PetGame/x64/Debug/: PetGame.exe.recipe  PetGame.ilk  shader.obj.enc  vc143.idb
PetGame/x64/Debug/PetGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PetGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
